--- a/src/app/calculadora/componentes/calculadora.component.html
+++ b/src/app/calculadora/componentes/calculadora.component.html
@@ -8,6 +8,7 @@
               <div class="col-xs-3">
                 <button 
                   type="button" 
+                  (click)="limpar()"
                   class="btn btn-danger kz-btn">C
                 </button>
               </div>
@@ -16,7 +17,8 @@
                   type="text" 
                   class="form-control text-right kz-input-text"
                   id="display" 
-                  name="display" 
+                  name="display"
+                  [value]="display"
                   readonly>
               </div>
             </div>
@@ -24,7 +26,8 @@
               <div class="col-xs-3">
                 <button 
                   type="button" 
-                  class="btn btn-default kz-btn" 
+                  class="btn btn-default kz-btn"
+                  (click)="adicionarNumero('7')"
                   id="btn7">7
                 </button>
               </div>
@@ -32,20 +35,23 @@
                 <button 
                   type="button" 
                   class="btn btn-default kz-btn" 
+                  (click)="adicionarNumero('8')"
                   id="btn8">8
                 </button>
               </div>
               <div class="col-xs-3">
                 <button 
                   type="button" 
-                  class="btn btn-default kz-btn" 
+                  class="btn btn-default kz-btn"
+                  (click)="adicionarNumero('9')" 
                   id="btn9">9
                 </button>
               </div>
               <div class="col-xs-3">
                 <button 
                   type="button" 
-                  class="btn btn-warning kz-btn" 
+                  class="btn btn-warning kz-btn"
+                  (click)="definirOperacao('/')" 
                   id="btnDivisao">/
                 </button>
               </div>
@@ -54,14 +60,16 @@
               <div class="col-xs-3">
                 <button 
                   type="button" 
-                  class="btn btn-default kz-btn" 
+                  class="btn btn-default kz-btn"
+                  (click)="adicionarNumero('4')" 
                   id="btn4">4
                 </button>
               </div>
               <div class="col-xs-3">
                 <button 
                   type="button" 
-                  class="btn btn-default kz-btn" 
+                  class="btn btn-default kz-btn"
+                  (click)="adicionarNumero('5')" 
                   id="btn5">5
                 </button>
               </div>
@@ -69,13 +77,15 @@
                 <button 
                   type="button" 
                   class="btn btn-default kz-btn" 
+                  (click)="adicionarNumero('6')"
                   id="btn6">6
                 </button>
               </div>
               <div class="col-xs-3">
                 <button 
                   type="button" 
-                  class="btn btn-warning kz-btn"  
+                  class="btn btn-warning kz-btn"
+                  (click)="definirOperacao('*')"   
                   id="btnMIltiplicacao">*
                 </button>
               </div>
@@ -85,20 +95,23 @@
                 <button 
                   type="button" 
                   class="btn btn-default kz-btn" 
+                  (click)="adicionarNumero('1')"
                   id="btn1">1
                 </button>
               </div>
               <div class="col-xs-3">
                 <button 
                   type="button" 
-                  class="btn btn-default kz-btn" 
+                  class="btn btn-default kz-btn"
+                  (click)="adicionarNumero('2')" 
                   id="btn2">2
                 </button>
               </div>
               <div class="col-xs-3">
                 <button 
                   type="button" 
-                  class="btn btn-default kz-btn" 
+                  class="btn btn-default kz-btn"
+                  (click)="adicionarNumero('3')" 
                   id="btn3">3
                 </button>
               </div>
@@ -106,6 +119,7 @@
                 <button 
                   type="button" 
                   class="btn btn-warning kz-btn" 
+                  (click)="definirOperacao('-')" 
                   id="btnSubtracao">-
                 </button>
               </div>
@@ -115,6 +129,7 @@
                 <button 
                   type="button" 
                   class="btn btn-default kz-btn" 
+                  (click)="adicionarNumero('0')" 
                   id="btn0">0
                 </button>
               </div>
@@ -122,6 +137,7 @@
                 <button 
                   type="button" 
                   class="btn btn-default kz-btn" 
+                  (click)="adicionarNumero('.')" 
                   id="btnDecimal">.
                 </button>
               </div>
@@ -129,13 +145,15 @@
                 <button 
                   type="button" 
                   class="btn btn-success kz-btn" 
+                  (click)="calcular()" 
                   id="btnCalcular">=
                 </button>
               </div>
               <div class="col-xs-3">
                 <button 
                   type="button" 
-                  class="btn btn-warning kz-btn" 
+                  class="btn btn-warning kz-btn"
+                  (click)="definirOperacao('+')"  
                   id="btnSoma">+
                 </button>
               </div>
